# 2048-solver

./: .gitignore  README.md
python_solver/: game.py  main.py
python_solver/algorithms/: base.py
rust_solver/: Cargo.toml
rust_solver/benches/: benchmark.rs
rust_solver/src/: expectimax.rs  game.rs  lib.rs  main.rs  precompute.rs
rust_solver/src/algorithms/: expectimax.rs  random.rs
solver/: game.py  main.py
solver/algorithms/: expectimax.py  random.py
src/: game.rs  main.rs  random.rs
