[package]
name = "rust_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
rand = "0.8.5"
serde = {version="1.0.149", features=["derive"]}
serde_json = "1.0.89"

[[bench]]
name = "benchmark"
harness = false
